:lipstick: Fix CSS clipping

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,7 @@
+body {
+	opacity: 1 !important;
+}
+
 html,
 body,
 div,
